proxy/whoami/00-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:1.11
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "32Mi"
              cpu: "50m"
          securityContext:
            allowPrivilegeEscalation: false
