proxy/whoami/01-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: reverse-proxy
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: whoami
